cookbooks/10xeng-node/files/default/iptables.rules
# Generated by iptables-save v1.4.12 on Fri Nov  9 00:19:30 2012
*nat
:PREROUTING ACCEPT [445:40727]
:INPUT ACCEPT [142:8520]
:OUTPUT ACCEPT [5628:1879466]
:POSTROUTING ACCEPT [302:18910]
-A POSTROUTING -s 172.16.0.0/12 -j MASQUERADE
COMMIT
# Completed on Fri Nov  9 00:19:30 2012
# Generated by iptables-save v1.4.12 on Fri Nov  9 00:19:30 2012
*filter
:INPUT DROP [1:328]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 8000 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD ! -d 172.16.0.0/12 -i lxcbr0 -j ACCEPT
-A FORWARD -i eth0 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o lxcbr0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o lxcbr0 -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri Nov  9 00:19:30 2012
